--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <meta name="description" content="렉시오 온라인 보드게임 플랫폼 - 태양 2 카드" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>렉시오 온라인</title>
   </head>
-  <body>
+  <body class="dark bg-gray-900 text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
