--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="렉시오 온라인 보드게임 플랫폼 - 태양 2 카드" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>렉시오 온라인</title>
+    <meta name="description" content="렉시오 온라인 보드게임 플랫폼" />
+    <link rel="icon" type="image/svg+xml" href="/Lexio_sun2.png" />
+    <title>Lexio Online</title>
   </head>
   <body class="dark bg-gray-900 text-white">
     <div id="app"></div>
